# opengl-playground

./: CMakeLists.txt  Readme.md
include/: camera.h  cube.h  display.h  light.h  mesh.h  platform.h  skybox.h  spline.h  terrain.h  texture.hpp  transform.h  vertex.h
res/: uvmap_platform.DDS
shaders/: cubeShader.fss  cubeShader.vs  skyboxShader.vs  splineShader.fss  splineShader.vs
src/: cube.cpp  display.cpp  light.cpp  main.cpp  mesh.cpp  objloader.cpp  skybox.cpp  spline.cpp  terrain.cpp  texture.cpp
